--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            background-color: #222;
+            background-color: #2980B9;
             color: #fff;
             height: 60px;
             width: 100%;
@@ -86,6 +86,15 @@
     </style>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-52FJNMW0VL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-52FJNMW0VL');
+    </script>
 </head>
 
 <body>
