--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom, #FFC107 0%, #FFC107 50%, #2980B9 50%, #2980B9 100%);
+            background: linear-gradient(to bottom, #ff0751 0%, #ff0751 50%, #2980B9 50%, #2980B9 100%);
             background-size: cover;
             background-position: center;
             font-family: 'Poppins', sans-serif;
