--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-52FJNMW0VL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X5624VYGM2"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-52FJNMW0VL');
+        gtag('config', 'G-X5624VYGM2');
     </script>
 </head>
 
